--- a/src/Pages/Homepage.module.css
+++ b/src/Pages/Homepage.module.css
@@ -14,7 +14,7 @@
 .home section {
   display: flex;
   flex-direction: column;
-  height: 85%;
+  height: 100%;
   align-items: center;
   justify-content: center;
   gap: 2.5rem;
@@ -32,3 +32,24 @@
   color: var(--color-light--1);
   margin-bottom: 2.5rem;
 }
+
+
+
+/* Mobile */
+@media screen and (max-width: 600px) {
+  .home {
+    height: 100%;
+    margin: 2.5rem;
+    background-image: linear-gradient(
+        rgba(36, 42, 46, 0.8),
+        rgba(36, 42, 46, 0.8)
+      ),
+      url("../background.jpg");
+    background-size: cover;
+    background-position: center;
+    padding: 2.5rem 5rem;
+  }
+  
+  
+}
+
